Added divs so we can do work separately

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <script src="js/jquery-ui-1.9.2.custom.js"></script>
 </head>
 <body>
-
+	<div id="EntryList" style="display:none;"></div>
+	<div id="TitleSection"></div>
+	<div id="Editor"></div>
+	<div id="MarkdownHelper"></div>
 </body>
 </html>
