Added css and some markdown helper stuff

--- a/index.html
+++ b/index.html
@@ -1,16 +1,98 @@
 <!doctype html>
 <html lang="us">
-<head>
-        <meta charset="utf-8">
-        <title>jQuery UI Example Page</title>
-        <link href="css/redmond/jquery-ui-1.9.2.custom.css" rel="stylesheet">
-        <script src="js/jquery-1.8.3.js"></script>
-        <script src="js/jquery-ui-1.9.2.custom.js"></script>
-</head>
-<body>
-	<div id="EntryList" style="display:none;"></div>
-	<div id="TitleSection"></div>
-	<div id="Editor"></div>
-	<div id="MarkdownHelper"></div>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>jQuery UI Example Page</title>
+		<link href="css/redmond/jquery-ui-1.9.2.custom.css" rel="stylesheet">
+		<script src="js/jquery-1.8.3.js"></script>
+		<script src="js/jquery-ui-1.9.2.custom.js"></script>
+		<script src="js/markdown_helper.js"></script>
+		<style>
+			#Editor{
+				
+			}
+			#TitleSection{
+				
+			}
+			#EntryList{
+				float:left;
+			}
+			#MarkdownHelper{
+				float:right;
+				width: 25%;
+			}
+		</style>
+	</head>
+	<body>
+		<div id="EntryList" style="display:none;"></div>
+		<div id="TitleSection"></div>
+		<div id="Editor"></div>
+		<div id="MarkdownHelper">
+			<div id="MarkdownHelperAccord">
+				<h3>Headers:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+				<h3>Text styles:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+				<h3>Unordered List:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+				<h3>Ordered List:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+				<h3>Images:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+				<h3>Links:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+				<h3>Code:</h3>
+				<div>
+					<p>
+					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+					</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
