Markdown Helper Nearly Done

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			#MarkdownHelper{
 				float:right;
 				width: 25%;
+				height: 400px;
 			}
 		</style>
 	</head>
@@ -31,66 +32,75 @@
 			<div id="MarkdownHelperAccord">
 				<h3>Headers:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+					# This is an h1 tag<br>
+					## This is an h2 tag<br>
+					###### This is an h6 tag
+					</code>
 				</div>
 				<h3>Text styles:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+					*This text will be italic*<br>
+					_This will also be italic_<br>
+					**This text will be bold**<br>
+					__This will also be bold__<br><br>
+					*You **can** combine them*
+					</code>
 				</div>
 				<h3>Unordered List:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+					* Item 1<br>
+					* Item 2<br>
+					<div style="padding-left:5em">
+						* Item 2a<br>
+						* Item 2b<br>
+					</div>
+					</code>
 				</div>
 				<h3>Ordered List:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+					1. Item 1<br>
+					2. Item 2<br>
+					3. Item 3<br>
+					<div style="padding-left:5em">
+						* Item 3a<br>
+						* Item 3b
+					</div>
+					</code>
 				</div>
 				<h3>Images:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+						![Diary Logo](/images/logo.png)<br>
+						Format: ![Alt Text](url)
+					</code>
 				</div>
 				<h3>Links:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+						http://github.com - automatic!<br>
+						[GitHub](http://github.com)
+					</code>
 				</div>
 				<h3>Code:</h3>
 				<div>
-					<p>
-					Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-					ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-					amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-					odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
-					</p>
+					<code>
+						Indent 4 Spaces:<br>
+						
+						Here is a Ruby code example<br>
+						without syntax highlighting:<br>
+						
+						<div style="padding-left:3em">
+								def foo
+									<div style="padding-left:3em">
+									puts "Yay Diaries :)"
+									</div>
+								end
+						</div>
+					</code>
 				</div>
 			</div>
 		</div>
