--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<div id="EntryList" style="display:none;">
 		</div>
 		<section id="TitleSection">
+			dsgfdhrdfdjfjfj
 			<h1><span>Title:</span> <div name="title" contenteditable="true" style="display:inline-block; width:70%;" class="single-line">New entry</div>
 			<div style="float:right;"><span>Date:</span> <input type="date" name="date" /></h1></div>
 		</section>		
