delete test text

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 	</head>
 	<body>
 		<div id="EntryList" style="display:none;">
+			<input type="button" />
+
 		</div>
 		<section id="TitleSection">
-			dsgfdhrdfdjfjfj
 			<h1><span>Title:</span> <div name="title" contenteditable="true" style="display:inline-block; width:70%;" class="single-line">New entry</div>
 			<div style="float:right;"><span>Date:</span> <input type="date" name="date" /></h1></div>
 		</section>		
