Changed box size

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 		</section>
 		<div>
 		<span id="Editor">
-			<textarea id="inputPane" cols="80" rows="20" class="pane" style="height: 370px; width:935px">
+			<textarea id="inputPane" cols="80" rows="20" class="pane" style="height: 370px; width:600px">
 			</textarea><br>
-			<div style="margin-right:0px;"><span style="display: inline-block;width: 75%;"></span><button id="pre">Preview</button><button id="save">Save</button></div>
+			<div style="margin-right:0px;"><span style="display: inline-block;width: 400px;"></span><button id="pre">Preview</button><button id="save">Save</button></div>
 		</span>
 		<div id="MarkdownHelper">
 			<div id="MarkdownHelperAccord">
