Changes involving local storage

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="us">
 	<head>
 		<meta charset="utf-8">
-		<title>jQuery UI Example Page</title>
+		<title>Diary</title>
 		<link href="css/redmond/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 		<script src="js/jquery-1.8.3.js"></script>
 		<script src="js/jquery-ui-1.9.2.custom.js"></script>
+		<script src="js/data.js"></script>
 		<script src="js/entry-list.js"></script>
 		<script src="js/bundle.js"></script>
 		<script src="js/title-section.js"></script>
 		<script src="js/markdown_helper.js"></script>
-		<script src="js/data.js"></script>
 		<style>
 			#Editor{
 				float:left;
@@ -149,7 +149,7 @@
 			</div>
 		</div>
 		</div>
-		<div id="dialog-message" title="Download complete">
+		<div id="dialog-message" title="Preview">
 			
 		</div>
 	</body>
