--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<script src="js/title-section.js"></script>
 		<script src="js/markdown_helper.js"></script>
 		<style>
+			body {
+  				-webkit-user-select: text;
+			}
 			#Editor{
 				float:left;
 			}
