--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 				<h3>Links:</h3>
 				<div>
 					<code>
-						http://github.com - automatic!<br>
-						[GitHub](http://github.com)
+						http://google.com - automatic!<br>
+						[Google](http://google.com)
 					</code>
 				</div>
 				<h3>Code:</h3>
@@ -146,7 +146,7 @@
 						<div style="padding-left:3em">
 								def foo
 									<div style="padding-left:3em">
-									puts "Yay Diaries :)"
+									puts "Yay"
 									</div>
 								end
 						</div>
