--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="us">
 	<head>
 		<meta charset="utf-8">
-		<title>Diary</title>
+		<title>DiaryDown</title>
 		<link href="css/redmond/jquery-ui-1.9.2.custom.css" rel="stylesheet">
 		<script src="js/jquery-1.8.3.js"></script>
 		<script src="js/jquery-ui-1.9.2.custom.js"></script>
